# TOP-25

./: .pre-commit-config.yaml  README.md
lab1/mol-dyn/: CMakeLists.txt
lab1/mol-dyn/include/moldyn/: avgvel.hpp  ekin.hpp  fcc.hpp  forces.hpp  init.hpp  maxwell.hpp  scale.hpp  update.hpp
lab1/mol-dyn/include/prng/: prng.h
lab1/mol-dyn/src/moldyn/: CMakeLists.txt  avgvel.cpp  ekin.cpp  fcc.cpp  forces.cpp  init.cpp  maxwell.cpp  update.cpp
lab1/mol-dyn/src/prng/: CMakeLists.txt  prng.c
lab1/saxpy/: main.c
lab1/vector/: CMakeLists.txt
lab1/vector/include/vector/: vector.hpp
lab1/vector/src/: CMakeLists.txt  main.cpp
lab2/stream/include/stream/: CMakeLists.txt
lab3/matrix-product/src/: main.cpp
lab3/mesh/src/: main.cpp
